--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod": "cd ios/ && pod install && cd .."
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.0.0",
+    "@react-native-firebase/auth": "^18.0.0",
     "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.10"
